Wed Mar  8 02:08:43 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* parse.y: escape expansion too early.

	* regex.c (re_compile_pattern): support \cX et al.

Mon Mar  6 12:28:37 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* ext/socket/socket.c (ip_addrsetup): should check length of hostname.

	* ext/socket/socket.c (ip_addrsetup): check newline at the end of
	  hostname.  These fixes suggested by Muvaw Pnazte <bugathlon@yahoo.com>.

Sun Mar  5 20:35:45 2000  WATANABE Hirofumi  <eban@os.rim.or.jp>

	* ext/Win32API/Win32API.c (Win32API_initialize): should call
	  LoadLibrary() everytime and should assign the hdll to Win32API
	  object(protect the hdll from GC).

Sat Feb 26 22:39:31 2000  EGUCHI Osamu  <eguchi@shizuokanet.ne.jp>

	* Fix String#* with huge string.

Fri Feb 25 06:42:26 2000  GOTOU YUUZOU  <gotoyuzo@notwork.org>

	* ext/socket/socket.c (ip_addrsetup): hostp should remain NULL if
	  host is nil.

Thu Feb 24 16:53:47 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (rb_thread_schedule): priority was too high for sleep
	  expired threads.

Sat Feb 19 23:58:51 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* regex.c (re_match): pop_loop should not pop at forward jump.

Thu Feb 17 19:09:05 2000  Katsuyuki Komatsu  <komatsu@sarion.co.jp>

	* win32/win32.c (mypopen): don't close handle if it is not assigned.
	* win32/win32.c (my_open_osfhandle): support O_NOINHERIT flag.
	* win32/win32.c (win32_getcwd): rename getcwd to win32_getcwd
	  in order to avoid using the C/C++ runtime DLL's getcwd.
	  Use CharNext() to process directory name.
	* win32/win32.h: map getcwd to win32_getcwd.

Wed Feb 16 00:32:49 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (method_arity): nd_rest is -1 for no rest argument.

	* process.c (rb_f_waitpid): returns nil when waitpid(2) returns 0.

Tue Feb 15 01:47:00 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* process.c (rb_f_waitpid): pid_t should be signed.
