@@ -1,4 +1,4 @@
 #define RUBY_VERSION "1.4.4"
-#define RUBY_RELEASE_DATE "2000-03-08"
+#define RUBY_RELEASE_DATE "2000-03-09"
 #define RUBY_VERSION_CODE 144
-#define RUBY_RELEASE_CODE 20000308
+#define RUBY_RELEASE_CODE 20000309
